--- a/web.3.4.config
+++ b/web.3.4.config
@@ -17,7 +17,7 @@
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\python.exe" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
-    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot\kakaobot" />
     <add key="DJANGO_SETTINGS_MODULE" value="kakaobot.settings" />
     <!--
       Uncomment the following key/value to enable remote debugging.
