--- a/web.3.4.config
+++ b/web.3.4.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--
       See PTVS documentation at http://pytools.codeplex.com/documentation
@@ -17,7 +17,7 @@
     <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="django.core.wsgi.get_wsgi_application()" />
     <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\python.exe" />
     <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
-    <add key="PYTHONPATH" value="D:\home\site\wwwroot\kakaobot" />
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
     <add key="DJANGO_SETTINGS_MODULE" value="kakaobot.settings" />
     <!--
       Uncomment the following key/value to enable remote debugging.
@@ -39,7 +39,9 @@
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <remove name="Python340_via_FastCGI" />
-      <add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python34\python.exe|D:\Python34\Scripts\wfastcgi.py" resourceType="Unspecified" requireAccess="Script" />
+      <add name="PythonHandler" path="*" verb="*" modules="FastCgiModule" scriptProcessor="D:\home\Python361x64\python.exe|D:\home\Python361x64\wfastcgi.py" resourceType="Unspecified" requireAccess="Script"/>
+
+      <!--<add name="Python FastCGI" path="handler.fcgi" verb="*" modules="FastCgiModule" scriptProcessor="D:\Python34\python.exe|D:\Python34\Scripts\wfastcgi.py" resourceType="Unspecified" requireAccess="Script" />-->
       <!-- Uncomment the following handler to enable remote debugging. -->
       <!--
       <add name="ptvsd" path="ptvsd" verb="*" resourceType="Unspecified" type="Microsoft.PythonTools.Debugger.WebSocketProxy, Microsoft.PythonTools.WebRole"/>
