--- a/web.3.4.config
+++ b/web.3.4.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <!--
       See PTVS documentation at http://pytools.codeplex.com/documentation
